2009-01-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38657
	* gfortran.dg/module_commons_3.f90: New test.

2009-01-05  Daniel Franke  <franke.daniel@gmail.com>

	PR fortran/37159
	* gfortran.dg/random_seed_1.f90: Updated.

2009-01-05  Mikael Morin  <mikael.morin@tele2.fr>

	PR fortran/38669
	PR fortran/38726
	* gfortran.dg/elemental_subroutine_7.f90: 
	Fix p values so that it can be used as vector subscript.

2009-01-05  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/defaulted7.C: New test.

2009-01-05  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/38672
	* gfortran.dg/host_assoc_blockdata_1.f90:  New test.
	* gfortran.dg/host_assoc_blockdata_2.f90:  New test.

2009-01-05  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/compat/struct-layout-1_generate.c (dg-options): Add -mieee
	for alpha*-*-* targets.
	* g++.dg/compat/struct-layout-1_generate.c (dg-options): Ditto.

2009-01-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38665
	* gfortran.dg/host_assoc_function_5.f90: New test.

2009-01-04  Mikael Morin  <mikael.morin@tele2.fr>

	PR fortran/38669
	* gfortran.dg/elemental_dependency_3.f90: New test.
	* gfortran.dg/elemental_subroutine_7.f90: New test.

2009-01-04  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/struct-ret-3.c: Include unistd.h.
	(main): Exit early if system memory page size is
	larger than 4096 bytes.

2009-01-04  Daniel Franke  <franke.daniel@gmail.com>

	PR fortran/38718
	* gfortran.dg/merge_init_expr.f90: New.

2009-01-04  Mikael Morin  <mikael.morin@tele2.fr>

	PR fortran/38536
	* gfortran.dg/c_loc_tests_13.f90: New test.
	* gfortran.dg/c_loc_tests_14.f90: New test.

2009-01-03  Daniel Franke  <franke.daniel@gmail.com>

	* gfortran.dg/func_result_4.f90: New.

2009-01-03  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38594
	* gfortran.dg/host_assoc_call_3.f90: Make sure that the generic
	interface still works, in addition to original tests.
	* gfortran.dg/host_assoc_call_6.f90: New test.

2009-01-03  Jakub Jelinek  <jakub@redhat.com>
