@@ -44,6 +44,7 @@ set test "largefile.c"
 set testh "largefile.hs"
 set f [open $test w]
 puts $f "/* { dg-xfail-if \"PR 14940\" { \"i?86-*-solaris2.10\" } { \"*\" } { \"\" } } */"
+puts $f "/* { dg-timeout-factor 4.0 } */"
 set v 0
 for { set v 0 } { $v < 10000 } { incr v } {
     puts $f "#define MACRO_${v} \"1234567890\" \"$v\""
